revisando funcionamiento de form y ajustando carpetas de sub

--- a/africa/africaf.html
+++ b/africa/africaf.html
@@ -55,7 +55,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('../../img/fondosubafrica.jpg')">
+     style="background-image: url('../img/fondosubafrica.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -112,7 +112,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/3africaganoderma.jpg" 
+          src="../img/3africaganoderma.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -138,7 +138,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/2africalentinus.jpg"
+          src="../img/2africalentinus.jpg"
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -162,7 +162,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/1africatermito.jpg" 
+          src="../img/1africatermito.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
