--- a/america/americaf.html
+++ b/america/americaf.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>HONGOS DE AMERICA</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	  <link rel="stylesheet" href="/./css/index.css">
+	  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
 <nav class="nav-container">
@@ -55,7 +55,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('../../img/fondosubamerica.jpg')">
+     style="background-image: url('../img/fondosubamerica.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -92,7 +92,7 @@
 
   <div class="text-center mt-12">
           <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700">
-            NorteAmeriaca y su mundo FUNGI
+            Ameriaca y su mundo FUNGI
           </h3>
         </div>
   <div class="m-4 space-y-8">
@@ -111,7 +111,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/1americaamenita.jpg" 
+          src="../img/1americaamenita.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -136,7 +136,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/2americamorchella.jpg" 
+          src="../img/2americamorchella.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -160,7 +160,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/3americaustilago.jpg" 
+          src="../img/3americaustilago.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
