--- a/antartida/antartidaf.html
+++ b/antartida/antartidaf.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>HONGOS DE LA ANTARTIDA</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	  <link rel="stylesheet" href="../../css/index.css">
+	  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
 <nav class="nav-container">
@@ -38,14 +38,14 @@
 
   <div class="menu" id="menu">
     <ul>
-      <li><a href="../../index.html">Presentación</a></li>
-      <li><a href="../../europa/index.html">Europa</a></li>
-      <li><a href="../../asia/index.html">Asia</a></li>
-      <li><a href="../../america/index.html">América</a></li>
-      <li><a href="../../oceania/index.html">Oceanía</a></li>
-      <li><a href="../../africa/index.html">África</a></li>
-      <li><a href="../index.html">Antartida</a></li>
-      <li><a href="../../juego/index.html">Juego</a></li> 
+      <li><a href="../index.html">Presentación</a></li>
+      <li><a href="../europa/index.html">Europa</a></li>
+      <li><a href="../asia/index.html">Asia</a></li>
+      <li><a href="../america/index.html">América</a></li>
+      <li><a href="../oceania/index.html">Oceanía</a></li>
+      <li><a href="../africa/index.html">África</a></li>
+      <li><a href="index.html">Antartida</a></li>
+      <li><a href="../juego/index.html">Juego</a></li> 
     </ul>
   </div>
 </nav>
@@ -55,7 +55,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('../../img/fondosubantartida.jpg')">
+     style="background-image: url('../img/fondosubantartida.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -110,7 +110,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/1antartidacryomyces.jpg"
+          src="../img/1antartidacryomyces.jpg"
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -135,7 +135,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/2antartidapseudogy.jpg" 
+          src="../img/2antartidapseudogy.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -158,7 +158,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/3antartidaphialophora.jpg" 
+          src="../img/3antartidaphialophora.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -194,13 +194,13 @@
 
       <!-- Botones -->
       <div class="flex gap-3 mt-4 md:mt-0 md:absolute md:right-4 md:bottom-4">
-        <a href="../../galeriaimg.html"
+        <a href="../galeriaimg.html"
            class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">GALERIA</a>
 
-        <a href="../../contacto.html"
+        <a href="../contacto.html"
            class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">CONTACTO</a>
 
-        <a href="../../formulario.html"
+        <a href="../formulario.html"
            class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">FORMULARIO</a>
       </div>
 
@@ -208,6 +208,6 @@
 
   </div>
 </footer>
-<script src="../../js/nav.js"></script>
+<script src="../js/nav.js"></script>
 </body>
 </html>
