--- a/asia/asiaf.html
+++ b/asia/asiaf.html
@@ -55,7 +55,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('../../img/fondosubasia.jpg')">
+     style="background-image: url('../img/fondosubasia.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -111,7 +111,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/1asiaganoderma.jpg" 
+          src="../img/1asiaganoderma.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -136,7 +136,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/2asiamatsutake.jpg" 
+          src="../img/2asiamatsutake.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -160,7 +160,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/3asiaophiocordycep.jpg" 
+          src="../img/3asiaophiocordycep.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
