--- a/europa/europaf.html
+++ b/europa/europaf.html
@@ -55,7 +55,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('../../img/fondosubeuropa.jpg')">
+     style="background-image: url('../img/fondosubeuropa.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -109,7 +109,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/1europatuber.jpg" 
+          src="../img/1europatuber.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -135,7 +135,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/2europaamanita.jpg" 
+          src="../img/2europaamanita.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
@@ -159,7 +159,7 @@
       <!-- IMAGEN 4x4 -->
       <div class="flex justify-center">
         <img 
-          src="../../img/3europaboletus.jpg" 
+          src="../img/3europaboletus.jpg" 
           alt="imagen del hongo" 
           class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
         />
