--- a/oceania/index.html
+++ b/oceania/index.html
@@ -184,7 +184,7 @@
 
               <!-- BOTÓN -->
               <div class="text-center mt-6">
-  <a href="sub/oceaniaf.html" class="btn-hongos">
+  <a href="oceaniaf.html" class="btn-hongos">
     Ver Hongos
   </a>
 </div>
