detalle del footer

--- a/antartida/antartidaf.html
+++ b/antartida/antartidaf.html
@@ -188,7 +188,7 @@
           <a href="mailto:juanaroibossio@gmail.com" class="hover:text-gray-800">
             Juanita
           </a>
-          — puedes contactarnos desde los botones.
+          puedes contactarnos desde los botones.
         </p>
       </div>
 
