--- a/antartida/index.html
+++ b/antartida/index.html
@@ -196,7 +196,7 @@ No hay flora visible, ni animales, ni nada que recuerde a un ecosistema terrestr
           <a href="mailto:juanaroibossio@gmail.com" class="hover:text-gray-800">
             Juanita
           </a>
-          — puedes contactarnos desde los botones.
+          puedes contactarnos desde los botones.
         </p>
       </div>
 
