--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Bienvenidx a este recorrido.
           <a href="mailto:juanaroibossio@gmail.com" class="hover:text-gray-800">
             Juanita
           </a>
-          — puedes contactarnos desde los botones.
+          puedes contactarnos desde los botones.
         </p>
       </div>
 
