--- a/america/index.html
+++ b/america/index.html
@@ -201,7 +201,7 @@
           <a href="mailto:juanaroibossio@gmail.com" class="hover:text-gray-800">
             Juanita
           </a>
-          — puedes contactarnos desde los botones.
+           puedes contactarnos desde los botones.
         </p>
       </div>
 
