--- a/asia/asiaf.html
+++ b/asia/asiaf.html
@@ -192,7 +192,7 @@
           <a href="mailto:juanaroibossio@gmail.com" class="hover:text-gray-800">
             Juanita
           </a>
-          — puedes contactarnos desde los botones.
+          puedes contactarnos desde los botones.
         </p>
       </div>
 
