--- a/formulario.html
+++ b/formulario.html
@@ -7,12 +7,18 @@
 	<script src="https://cdn.tailwindcss.com"></script>
 	  <link rel="stylesheet" href="css/index.css">
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<!-- Vue JS -->
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+<!-- EmailJS -->
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
 <script>
     (function() {
         emailjs.init("UZ2h8lJRq6hRd5nGg");
     })();
 </script>
+<script src="js/form.js"></script>
 </head>
 <body>
 <nav class="nav-container">
@@ -60,69 +66,102 @@
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
 <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
 
-<main class="profile-page">
+<main id="app" class="profile-page">
+
+  <!-- SECCIÓN PRINCIPAL SUPERIOR -->
   <section class="relative block h-500-px">
-    <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url(img/formulario.jpg)"">
-  <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
-</div>
-    <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-70-px" style="transform: translateZ(0px)">
-      <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" version="1.1" viewBox="0 0 2560 100" x="0" y="0">
-        <polygon class="text-blueGray-200 fill-current" points="2560 0 2560 100 0 100"></polygon>
+    <div
+      class="absolute top-0 w-full h-full bg-center bg-cover"
+      style="background-image: url('img/formulario.jpg');"
+    >
+      <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
+    </div>
+
+    <div
+      class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-70-px"
+      style="transform: translateZ(0px)"
+    >
+      <svg
+        class="absolute bottom-0 overflow-hidden"
+        xmlns="http://www.w3.org/2000/svg"
+        preserveAspectRatio="none"
+        version="1.1"
+        viewBox="0 0 2560 100"
+        x="0" y="0"
+      >
+        <polygon
+          class="text-blueGray-200 fill-current"
+          points="2560 0 2560 100 0 100"
+        ></polygon>
       </svg>
     </div>
   </section>
-	<section class="relative py-16 bg-blueGray-200">
-          </div>
-          <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
-            <div class="flex flex-wrap justify-center">
-              <div class="w-full lg:w-9/12 px-4">
-               <div class="max-w-md mx-auto mt-10 bg-white p-8 rounded-xl shadow-md">
-        <h2 class="text-2xl font-bold text-center mb-6">Formulario de Contacto</h2>
 
-        <form id="contactForm" class="space-y-5">
+  <!-- SECCIÓN DEL FORMULARIO -->
+  <section class="relative py-16 bg-blueGray-200">
+    <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
+      <div class="flex flex-wrap justify-center">
+        <div class="w-full lg:w-9/12 px-4">
 
-            <div>
-                <label class="font-semibold" for="nombre">Nombre </label>
-                <input 
-                    type="text" id="nombre" name="nombre" required
-                    class="w-full mt-1 p-3 rounded-lg border border-gray-300"
+          <div class="max-w-md mx-auto mt-10 bg-white p-8 rounded-xl shadow-md">
+            <h2 class="text-2xl font-bold text-center mb-6">Formulario de Contacto</h2>
+
+            <!-- FORMULARIO CONTROLADO POR VUE -->
+            <form id="miFormulario" class="space-y-5" @submit.prevent="enviarFormulario">
+
+              <div>
+                <label class="font-semibold" for="nombre">Nombre</label>
+                <input
+                  type="text"
+                  id="nombre"
+                  name="user_name"
+                  v-model="form.name"
+                  required
+                  class="w-full mt-1 p-3 rounded-lg border border-gray-300"
                 >
-            </div>
+              </div>
 
-            <div>
-                <label class="font-semibold" for="email">Correo Gmail </label>
-                <input 
-                    type="email" id="email" name="email" required
-                    placeholder="tunombre@gmail.com"
-                    class="w-full mt-1 p-3 rounded-lg border border-gray-300"
+              <div>
+                <label class="font-semibold" for="email">Correo Gmail</label>
+                <input
+                  type="email"
+                  id="email"
+                  name="user_email"
+                  v-model="form.email"
+                  placeholder="tunombre@gmail.com"
+                  required
+                  class="w-full mt-1 p-3 rounded-lg border border-gray-300"
                 >
-            </div>
+              </div>
 
-            <div>
-                <label class="font-semibold" for="mensaje">Comentario </label>
-                <textarea 
-                    id="mensaje" name="mensaje" required
-                    class="w-full mt-1 p-3 rounded-lg border border-gray-300 h-32 resize-y"
+              <div>
+                <label class="font-semibold" for="mensaje">Comentario</label>
+                <textarea
+                  id="mensaje"
+                  name="message"
+                  v-model="form.message"
+                  required
+                  class="w-full mt-1 p-3 rounded-lg border border-gray-300 h-32 resize-y"
                 ></textarea>
-            </div>
+              </div>
 
-            <button 
+              <button
                 type="submit"
                 class="w-full bg-orange-500 hover:bg-orange-600 text-white p-3 rounded-lg text-lg font-semibold"
-            >
+              >
                 Enviar
-            </button>
+              </button>
 
-        </form>
-    </div>
-              </div>
-            </div>
+            </form>
           </div>
+
         </div>
       </div>
-    </section>
-    </main>
+    </div>
+  </section>
+
+</main>
+
     <footer class="relative bg-blueGray-200 pt-8 pb-6 mt-8">
   <div class="container mx-auto px-4">
 
@@ -154,7 +193,6 @@
   </div>
 </footer>
 <script src="js/nav.js"></script>
-<script src="form.js"></script>
 
 </body>
 </html>
