--- a/formulario.html
+++ b/formulario.html
@@ -4,21 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>FORMULARIO SITIO WEB </title>
-	<script src="https://cdn.tailwindcss.com"></script>
 	  <link rel="stylesheet" href="css/index.css">
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<!-- Vue JS -->
+<!-- Tailwind -->
+<script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="css/index.css">
+
+<!-- Vue -->
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-<!-- EmailJS -->
-<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-
-<script>
-    (function() {
-        emailjs.init("UZ2h8lJRq6hRd5nGg");
-    })();
-</script>
-<script src="js/form.js"></script>
 </head>
 <body>
 <nav class="nav-container">
@@ -103,56 +96,63 @@
       <div class="flex flex-wrap justify-center">
         <div class="w-full lg:w-9/12 px-4">
 
-          <div class="max-w-md mx-auto mt-10 bg-white p-8 rounded-xl shadow-md">
+          <div  class="max-w-md mx-auto mt-10 bg-white p-8 rounded-xl shadow-md">
             <h2 class="text-2xl font-bold text-center mb-6">Formulario de Contacto</h2>
 
             <!-- FORMULARIO CONTROLADO POR VUE -->
-            <form id="miFormulario" class="space-y-5" @submit.prevent="enviarFormulario">
+           <form
+  id="miFormulario"
+  class="space-y-5"
+  action="https://formspree.io/f/mblnwlvv"
+  method="POST"
+  @submit.prevent="validarYEnviar"
+  novalidate
+>
 
-              <div>
-                <label class="font-semibold" for="nombre">Nombre</label>
-                <input
-                  type="text"
-                  id="nombre"
-                  name="user_name"
-                  v-model="form.name"
-                  required
-                  class="w-full mt-1 p-3 rounded-lg border border-gray-300"
-                >
-              </div>
+  <div>
+    <label class="font-semibold" for="nombre">Nombre</label>
+    <input
+      type="text"
+      id="nombre"
+      name="name"
+      v-model.trim="form.name"
+      required
+      class="w-full mt-1 p-3 rounded-lg border border-gray-300"
+    >
+  </div>
 
-              <div>
-                <label class="font-semibold" for="email">Correo Gmail</label>
-                <input
-                  type="email"
-                  id="email"
-                  name="user_email"
-                  v-model="form.email"
-                  placeholder="tunombre@gmail.com"
-                  required
-                  class="w-full mt-1 p-3 rounded-lg border border-gray-300"
-                >
-              </div>
+  <div>
+    <label class="font-semibold" for="email">Correo Gmail</label>
+    <input
+      type="email"
+      id="email"
+      name="email"
+      v-model.trim="form.email"
+      placeholder="tunombre@gmail.com"
+      required
+      class="w-full mt-1 p-3 rounded-lg border border-gray-300"
+    >
+  </div>
 
-              <div>
-                <label class="font-semibold" for="mensaje">Comentario</label>
-                <textarea
-                  id="mensaje"
-                  name="message"
-                  v-model="form.message"
-                  required
-                  class="w-full mt-1 p-3 rounded-lg border border-gray-300 h-32 resize-y"
-                ></textarea>
-              </div>
+  <div>
+    <label class="font-semibold" for="mensaje">Comentario</label>
+    <textarea
+      id="mensaje"
+      name="message"
+      v-model.trim="form.message"
+      required
+      class="w-full mt-1 p-3 rounded-lg border border-gray-300 h-32 resize-y"
+    ></textarea>
+  </div>
 
-              <button
-                type="submit"
-                class="w-full bg-orange-500 hover:bg-orange-600 text-white p-3 rounded-lg text-lg font-semibold"
-              >
-                Enviar
-              </button>
+  <button
+    type="submit"
+    class="w-full bg-orange-500 hover:bg-orange-600 text-white p-3 rounded-lg text-lg font-semibold"
+  >
+    Enviar
+  </button>
 
-            </form>
+</form>
           </div>
 
         </div>
@@ -192,6 +192,7 @@
 
   </div>
 </footer>
+<script src="js/form.js"></script>
 <script src="js/nav.js"></script>
 
 </body>
